<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".implem.ListeSport"
    tools:layout_editor_absoluteY="81dp">



    <RelativeLayout
        android:id="@+id/relativeLayout"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginBottom="4dp"
        android:layout_weight="2"
        app:layout_constraintBottom_toTopOf="@+id/gridview"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentTop="true"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="15dp"
            android:fontFamily="@font/alice"
            android:text="Catégories"
            android:textColor="#E40E1F"
            android:textSize="30sp" />

    </RelativeLayout>

    <GridView
        android:id="@+id/gridview"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginBottom="3dp"
        android:background="@color/white"
        android:columnWidth="150dp"
        android:gravity="center"
        android:horizontalSpacing="0dp"
        android:numColumns="auto_fit"
        android:stretchMode="spacingWidthUniform"
        android:verticalSpacing="24dp"
        app:layout_constraintBottom_toTopOf="@+id/myFrame"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/relativeLayout" />

    <Button
        android:id="@+id/buttonRdv"
        android:layout_width="0dp"
        android:layout_height="79dp"
        android:layout_marginEnd="16dp"
        android:layout_marginBottom="11dp"
        android:background="@drawable/circle"
        android:drawableTop="@android:drawable/ic_menu_my_calendar"
        android:fontFamily="@font/alice"
        android:paddingTop="10dp"
        android:text="RDV"
        android:textAlignment="center"
        android:textColor="@color/white"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/btnSeances"
        app:layout_constraintTop_toBottomOf="@+id/myFrame" />


    <Button
        android:id="@+id/btnSeances"
        android:layout_width="0dp"
        android:layout_height="76dp"
        android:layout_marginStart="152dp"
        android:layout_marginEnd="28dp"
        android:background="@drawable/circle"
        android:drawableTop="@android:drawable/ic_menu_my_calendar"
        android:fontFamily="@font/alice"
        android:paddingTop="10dp"
        android:text="Seances"
        android:textAlignment="center"
        android:textColor="@color/white"
        app:layout_constraintBottom_toBottomOf="@+id/buttonRdv"
        app:layout_constraintEnd_toStartOf="@+id/buttonRdv"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/buttonRdv" />

    <Button
        android:id="@+id/btnFiltre"
        android:layout_width="0dp"
        android:layout_height="80dp"
        android:layout_marginStart="25dp"
        android:layout_marginEnd="28dp"
        android:layout_marginBottom="20dp"
        android:background="@drawable/circle"
        android:drawableTop="@android:drawable/ic_menu_my_calendar"
        android:fontFamily="@font/alice"
        android:paddingTop="10dp"
        android:text="Filtre Date"
        android:textAlignment="center"
        android:textColor="@color/white"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@+id/btnSeances"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/myFrame" />

    <FrameLayout
        android:id="@+id/myFrame"
        android:layout_width="0dp"
        android:layout_height="207dp"
        android:layout_marginBottom="2dp"
        android:background="@color/white"
        app:layout_constraintBottom_toTopOf="@+id/buttonRdv"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/gridview" />

    <ImageView
        android:id="@+id/back"
        android:layout_width="29dp"
        android:layout_height="33dp"
        android:layout_marginStart="26dp"
        android:layout_marginTop="16dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/back" />

</androidx.constraintlayout.widget.ConstraintLayout>
