...
<menu xmlns:android="http://schemas.android.com/apk/res/android">
  <!--  <item
        android:id="@+id/navigation_accueil"
        android:icon="@drawable/home"
        android:title="Accueil" /> -->
    <item
        android:id="@+id/navigation_sports"
        android:icon="@drawable/sport"
        android:title="Sport" />

    <item
        android:id="@+id/navigation_crous"
        android:icon="@drawable/crous"
        android:title="Crous" />

...
